tests/ui/codegen/evm-ir/validation/parse_immutable_block.evmir
@module ImmutableBlock

bb0:
  push_immutable bb1 //~ ERROR: expected integer literal
  stop
